--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                     <p><strong>Phone:</strong> <a href="tel:+919832645089">+91-9832645089</a></p>
                     <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/sourin-saha-3586281b7" target="_blank" rel="noopener">sourin-saha-3586281b7</a></p>
                     <p><strong>GitHub:</strong> <a href="https://github.com/Sourin123" target="_blank" rel="noopener">Sourin123</a></p>
-                    <a href="Sourin_Saha_Resume.pdf" class="cta-btn" download aria-label="Download Resume" style="margin-top:1rem;display:inline-block;">⬇️ Download Resume</a>
+                    <a href="./assets/Sourin_Saha_resume[1].pdf" class="cta-btn" download aria-label="Download Resume" style="margin-top:1rem;display:inline-block;">⬇️ Download Resume</a>
                 </div>
                 <div class="contact-form">
                     <form action="mailto:sourinsaha2001@gmail.com" method="POST" enctype="text/plain">
